Add algorithm for mergesort
Signed-off-by: Mahavir Jain <mahavirpj@gmail.com>

--- a/code_snippets/Makefile
+++ b/code_snippets/Makefile
@@ -2,7 +2,10 @@
 CC = gcc
 CFLAGS = -Wall -O2
 
-all: heapsort revstack tailcall
+all: mergesort heapsort revstack tailcall
+
+mergesort: mergesort.c
+	$(CC) $(CFLAGS) $< -o $@
 
 heapsort: heapsort.c
 	$(CC) $(CFLAGS) $< -o $@
@@ -15,4 +18,4 @@ tailcall: tailcall.c
 
 clean:
 	@rm -f *.o
-	@rm -f heapsort revstack tailcall
+	@rm -f mergesort heapsort revstack tailcall
