Add circular buffer minimum value finding program
Signed-off-by: Mahavir Jain <mahavirpj@gmail.com>

--- a/code_snippets/Makefile
+++ b/code_snippets/Makefile
@@ -2,7 +2,7 @@
 CC = gcc
 CFLAGS = -Wall -O2
 
-all: mergesort heapsort revstack tailcall
+all: mergesort heapsort revstack tailcall circular_arr_min
 
 mergesort: mergesort.c
 	$(CC) $(CFLAGS) $< -o $@
@@ -16,6 +16,9 @@ revstack: revstack.c
 tailcall: tailcall.c
 	$(CC) $(CFLAGS) $< -o $@
 
+circular_arr_min: circular_arr_min.c
+	$(CC) $(CFLAGS) $< -o $@
+
 clean:
 	@rm -f *.o
-	@rm -f mergesort heapsort revstack tailcall
+	@rm -f mergesort heapsort revstack tailcall circular_arr_min
