--- a/code_snippets/Makefile
+++ b/code_snippets/Makefile
@@ -1,9 +1,9 @@
 
-CC = gcc
-CFLAGS = -Wall -O2
+CC := gcc
+CFLAGS := -Wall -O2 -I./include/
 
 all: mergesort mergesort-list heapsort revstack tailcall \
-	 circular_arr_min hashtable
+	 circular_arr_min hashtable stack_mid merge-sorted-array
 
 mergesort: mergesort.c
 	$(CC) $(CFLAGS) $< -o $@
@@ -26,8 +26,15 @@ circular_arr_min: circular_arr_min.c
 hashtable: hashtable.c
 	$(CC) $(CFLAGS) $< -o $@
 
+stack_mid: stack_mid.c
+	$(CC) $(CFLAGS) $< -o $@
+
+merge-sorted-array: merge-sorted-array.c
+	$(CC) $(CFLAGS) $< -o $@
+
 clean:
 	@rm -f *.o
 	@rm -f mergesort mergesort-list heapsort revstack \
-		tailcall circular_arr_min hashtable
+		tailcall circular_arr_min hashtable stack_mid \
+		merge-sorted-array
 
