More reorgs and better makefile handling
Signed-off-by: Mahavir Jain <mahavirpj@gmail.com>

--- a/code_snippets/Makefile
+++ b/code_snippets/Makefile
@@ -1,40 +1,47 @@
+.PHONY: all
 
+PRG_SUFFIX_FLAG := 0
+#
 CC := gcc
-CFLAGS := -Wall -O2 -I./include/
-
-all: mergesort mergesort-list heapsort revstack tailcall \
-	 circular_arr_min hashtable stack_mid merge-sorted-array
-
-mergesort: mergesort.c
-	$(CC) $(CFLAGS) $< -o $@
-
-mergesort-list: mergesort-list.c
-	$(CC) $(CFLAGS) $< -o $@
-
-heapsort: heapsort.c
-	$(CC) $(CFLAGS) $< -o $@
-
-revstack: revstack.c
-	$(CC) $(CFLAGS) $< -o $@
-
-tailcall: tailcall.c
-	$(CC) $(CFLAGS) $< -o $@
-
-circular_arr_min: circular_arr_min.c
-	$(CC) $(CFLAGS) $< -o $@
-
-hashtable: hashtable.c
-	$(CC) $(CFLAGS) $< -o $@
-
-stack_mid: stack_mid.c
-	$(CC) $(CFLAGS) $< -o $@
-
-merge-sorted-array: merge-sorted-array.c
-	$(CC) $(CFLAGS) $< -o $@
+LDFLAGS := 
+CFLAGS_INC := -I ./include/ -I ./lib/
+CFLAGS := -g -O2 -Wall $(CFLAGS_INC)
+#
+## ==================- NOTHING TO CHANGE BELOW THIS LINE ===================
+##
+SRCS := $(wildcard src/*.c)
+PRGS := $(patsubst %.c,%,$(SRCS))
+PRG_SUFFIX=
+BINS := $(patsubst %,%$(PRG_SUFFIX),$(PRGS))
+## OBJS are automagically compiled by make.
+OBJS := $(patsubst %,%.o,$(PRGS))
+##
+all : $(BINS)
+##
+## For clarity sake we make use of:
+.SECONDEXPANSION:
+OBJ = $(patsubst %$(PRG_SUFFIX),%.o,$@)
+ifeq ($(PRG_SUFFIX_FLAG),0)
+        BIN = $(patsubst %$(PRG_SUFFIX),%,$@)
+else
+        BIN = $@
+endif
+## Compile the executables
+%$(PRG_SUFFIX) : $(OBJS)
+	$(CC) $(OBJ) $(LDFLAGS) -o $(BIN)
+##
+## $(OBJS) should be automagically removed right after linking.
+##
+veryclean:
+ifeq ($(PRG_SUFFIX_FLAG),0)
+	$(RM) $(PRGS)
+else
+    $(RM) $(BINS)
+endif
+##
+rebuild: veryclean all
 
 clean:
-	@rm -f *.o
-	@rm -f mergesort mergesort-list heapsort revstack \
-		tailcall circular_arr_min hashtable stack_mid \
-		merge-sorted-array
-
+	$(RM) $(BINS)
+##
+## eof Generic_Multi_Main_PWD.makefile
